--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sunday_16_10/task1.html"></a>
+    <a href="sunday_16_10/task1.html"> Task1</a>
+    <a href="sunday_16_10/task2.html">Task2</a>
+    <a href="sunday_16_10/task3.html">Task3</a>
+    <a href="sunday_16_10/task4.html">task4</a>
 </body>
 </html>
