--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="sunday_16_10/task2.html">Task2</a>
     <a href="sunday_16_10/task3.html">Task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
+    <a href="/Monday _17_10/"></a>
+    <a href="/m"></a>
 </body>
 </html>
