--- a/sunday_16_10/task4.html
+++ b/sunday_16_10/task4.html
@@ -4,14 +4,9 @@
    
 </head>
 <body>
-    <a href="http://https://github.com/"> github</a>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit
-        . Doloribus nulla aspernatur vitae est nihil quaerat ipsum
-         temporibus pariatur facilis officiis iusto molestiae accusantium, 
-         optio ipsam delectus, quisquam cumque, soluta a.
-    </p>
-    <hr>
-    <h6>hi there</h6>
+    <a href="http://https://github.com/"> Github</a>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus molestias maxime architecto! Earum nesciunt reprehenderit laboriosam optio cupiditate ut cum? Dolores aliquam a repudiandae amet ullam modi veritatis voluptatibus. Debitis ab doloremque commodi molestias sequi! At, maxime. Quidem animi commodi perferendis dolorum mollitia, beatae explicabo aspernatur odit quo quas neque totam consectetur aperiam illo, enim quos veritatis ipsa alias, voluptatem incidunt. Dolores corporis beatae aperiam quasi commodi earum minima, alias dignissimos debitis numquam ex adipisci nam quia, repudiandae aut iusto harum blanditiis nostrum labore aspernatur suscipit, aliquid praesentium? Laboriosam dignissimos laudantium facilis officia minima aliquid cum ex. Rem, asperiores facilis? <hr>
+    <h4>hi there</h4>
     <h1>I am Head</h1>
     <a href="http://https://loremipsum.io/">Lorem </a>this is for dummy text
    
