--- a/Monday _17_10/task1.html
+++ b/Monday _17_10/task1.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<p>hvhvhvh</p>
+<html>
 <body>
-    
+
+<h1>Our First Form! </h1>
+
+<form style="border:#000; border: width 2px; border-style: outset;">
+    <br>
+  <label for="fname">Username:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Password:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="login">
+  <br>
+</form>
+
+
 </body>
 </html>
-
-
-
