--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>sunday_16_10</h1>
     <a href="sunday_16_10/task1.html"> Task1</a>
     <a href="sunday_16_10/task2.html">Task2</a>
     <a href="sunday_16_10/task3.html">Task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
+    <h1>Monday _17_10</h1>
     <a href="Monday _17_10/task1.html">task5</a>
-   
+    <a href="Monday _17_10/task2.html">task6</a>
+   <a href="Monday _17_10/task3.html">task7</a>
+   <a href="Monday _17_10/task4.html">task8</a>
+   <a href="Monday _17_10/task5.html">task9</a>
 </body>
 </html>
