--- a/Monday _17_10/task5.html
+++ b/Monday _17_10/task5.html
@@ -23,7 +23,7 @@ table, th, td {
     
   </tr>
   <tr>
-    <td>lorem</td><td colspan="2">lorem</td>
+    <td>lorem</td><td colspan="2" rowspan="2">lorem</td>
   <!-- <tr><td>lorem</td><td>lorem</td><td>lorem</td> -->
     <td>lorem</td>
    
@@ -32,8 +32,10 @@ table, th, td {
     <td  >lorem</td>
     <td colspan="2" >lorem</td>
     <!-- <td>lorem</td>
-    <td>lorem</td></tr> -->
-
+    
+ -->
+ <!-- <td>lorem</td> -->
+  </tr>
     <tr>
         <td>lorem</td>
         <td>lorem</td>
