--- a/Monday _17_10/task4.html
+++ b/Monday _17_10/task4.html
@@ -21,18 +21,18 @@ table, th, td {
     
   </tr>
   <tr>
-    <td>><img src="h.jpg" width="200"height="150" alt=""></td>
-    <td><a href="h.jpg">Horse</a></td>
+    <td>><img src="g.jpg" width="200"height="150" alt=""></td>
+    <td><a href="g.jpg">Horse</a></td>
 
   </tr>
   <tr>
-    <td><img src="j.jpg" width="200"height="150" alt=""></td>
-    <td><a href="j.jpg">Dog</a></td>
+    <td><img src="h.jpg" width="200"height="150" alt=""></td>
+    <td><a href="h.jpg">Dog</a></td>
     
   </tr>
   <tr>
-    <td><img src="c.jpg" width="200"height="150" alt=""></td>
-    <td><a href="c.jpg">Cat</a></td>
+    <td><img src="l.jpg" width="200"height="150" alt=""></td>
+    <td><a href="l.jpg">Cat</a></td>
    
   </tr>
 </table>
