--- a/Monday _17_10/task5.html
+++ b/Monday _17_10/task5.html
@@ -9,7 +9,7 @@ table, th, td {
 
 
 
-<table style="width: 50px;%">
+<table style="width: 50px;">
   <tr>
     <th colspan="4">lorem</th>
     <!-- <th>lorem</th> -->
