--- a/tast/task.html
+++ b/tast/task.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><style>
+    table,th,td{
+        border: 2px solid black;
+    }
+</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    <img src="l.jpg" alt="">
+    <input type="text" name="" id="">
+    <img src="" alt="">
+
+  
+       drink lest <ol> <li>tae</li> <li>coffe</li><li>mailk</li></ol>
+       food lest <ul><li>fish</li><li>friut</li><li>apple</li></ul>
+       alimnt <dl> <dt>cat</dt> <dd>cute</dd><dt>doge</dt><dd>strog</dd> <dt>food</dt> <dd>friut</dd>
+        <table>
+            <tr> <th >age</th> 
+                <th>name</th> <th>enj</th></tr>
+            <tr><td>g88</td> <td>fatima</td>
+                <td >Eng </td>
+            </tr>
+            <tr> <td>88</td> <td>tabark</td> 
+                <td>cs</td></tr>
+            <tr> <th>77</th> 
+                <th>mhomd</th><th>Eng</th></tr>
+        </table>
+         <form style="border: 2p5 soild red;">
+
+            <div >
+            <label for="">name</label>
+            <input type="text" name="" id=""> </div>
+            <div style=" border :2px soild green ">
+            <label for="">Password</label>
+            <input type="pasaword">  
+            <button type="button">
+
+           <section>
+            <option value="amman">amman</option>
+            <option value="kark"></option>
+
+           </section>
+           <br> <br> <br>
+           <iframe width=233px hight=556px> src=<iframe width="560" height="315" src="https://www.youtube.com/embed/svEChDFqQjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+
+         </form>
+
+         
 </body>
 </html>
