--- a/tuesday_18_10/task4.html
+++ b/tuesday_18_10/task4.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <body>
-        <h3>Hello Market!
-        </H3>
-        <hr>
-    <p>laptop<s> 500</s> 300$</p>
-    <p>PS4s <s> 800</s> 700$
-    </p>
-    <hr>
-    
-        
-    </body>
+<body>
+    <img src="f.png"width ="600" height="400" alt="t">
+    <img src="sd.png"width ="400" height="250" alt="g">
+    <img src="s.png"width ="200" height="100" alt="h">
+
+</body>
 </html>
