--- a/index.html
+++ b/index.html
@@ -18,5 +18,17 @@
    <a href="Monday _17_10/task3.html">task7</a>
    <a href="Monday _17_10/task4.html">task8</a>
    <a href="Monday _17_10/task5.html">task9</a>
+   <h1> Tuesday_18_10</h1>
+   <a href="tuesday_18_10/taskk1.html">task10</a>
+   <a href="tuesday_18_10/taskkk2.html">task10</a>
+   <a href="tuesday_18_10/taskk3.html">task10</a>
+   <a href="tuesday_18_10/task4.html">task10</a>
+   <a href="tuesday_18_10/task5.html">task10</a>
+   <a href="tuesday_18_10/task66.html">task10</a>
+
+
+
+   
+
 </body>
 </html>
