--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TASKS</title>
+    <style> h1{color: rgb(191, 25, 25);}</style>
+    <link rel="" href="">
 </head>
-<body>
+<body style="background-color:rgb(246, 205, 241);">
     <h1>sunday_16_10</h1>
     <a href="sunday_16_10/task1.html"> Task1</a>
     <a href="sunday_16_10/task2.html">Task2</a>
     <a href="sunday_16_10/task3.html">Task3</a>
     <a href="sunday_16_10/task4.html">task4</a>
+    <hr>
     <h1>Monday _17_10</h1>
     <a href="Monday _17_10/task1.html">task5</a>
     <a href="Monday _17_10/task2.html">task6</a>
    <a href="Monday _17_10/task3.html">task7</a>
    <a href="Monday _17_10/task4.html">task8</a>
    <a href="Monday _17_10/task5.html">task9</a>
+   <hr>
    <h1> Tuesday_18_10</h1>
    <a href="tuesday_18_10/taskk1.html">task10</a>
    <a href="tuesday_18_10/taskkk2.html">task11</a>
@@ -26,7 +30,10 @@
    <a href="tuesday_18_10/task5.html">task14</a>
    <a href="tuesday_18_10/task66.html">task15</a>
 
-
+<h1>Thursday _20_10</h1>
+<a href="Thursday_20_10/task1.html">task16</a>
+<a href="Thursday_20_10/task2.html">task17</a>
+<a href="Thursday_20_10/task3.html">task18</a>
 
    
 
