--- a/tast/ff.html
+++ b/tast/ff.html
@@ -8,7 +8,7 @@
 
     <style>
 
-         .a{border: 1px red solid; width: 50%; border-container:; height: 50%; color: rgb(61, 19, 74);border-radius: 10px;  margin:10px 10px 10px 10px;}
+         .a{border: 1px red solid; width: 50; height: 50%; color: rgb(61, 19, 74);border-radius: 10px;  margin:10px 10px 10px 10px;}
 
            .a #ah ,#ap ,.b #bh ,#bp{margin: 10px 10px 10px 10px;}
         .a #a1{ background-color: rgba(0, 0, 255, 0.211);} 
