--- a/tast/task.html
+++ b/tast/task.html
@@ -39,10 +39,11 @@
             <label for="">Password</label>
             <input type="pasaword">  
             <button type="button">
-
+<br> <br>
+           <label for="city">city</label>
            <section>
             <option value="amman">amman</option>
-            <option value="kark"></option>
+            <option value="kark">kark</option>
 
            </section>
            <br> <br> <br>
