--- a/tuesday_18_10/exstra3.html
+++ b/tuesday_18_10/exstra3.html
@@ -5,20 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <h1>Employee Intreests Survey form</h1> <br>
-    <form action="ml"></form>
-    <label for="g" id="">Enter your name:</label>
-    <input type="text"><br>
-    <label for="g">Enter your department:</label>
-    <input type="text"><br>
-    <label for="g">Tell us alittleb us a little  about
-        yourself:</label>
-    <input type="text"><br>
 
-</body><label for="g">Enter your name:</label>
-    <input type="radio"><br>   <input type="radio"><br>
-    <label for="g">Enter your name: </label>
-    <input type="text">
-</html>
+
+            <style> 
+         #w   { border:"border: 2px red solid;"}</style>
+</head>
+<body style="background-color:pink;">
+    <h1>Employee Intreests Survey form</h1> <br>
+    <form>
+        <label >name</label>
+        <input type="text" ><br>
+        <lapel> age</lapel>
+        <input type="number"><br>
+        <label >Password</label>
+        <input type="password"><br>
+
+        <label > time</label>
+        <input type="time"><br>
+        <label > date</label>
+        <input type="date"><br>
+        Gender;
+        <input type="radio" name=" Gender" > male
+        <input type="radio" name=" Gender">female<br>
+
+
+        <select>
+         <label > city</label>
+         <option value="Amman">Amman</option>
+         <option value="Aqaba">Aqaba</option>
+        </select>
+        <br> <br>
+    </form>
+
+    <table id="w" >
+           <thead>
+            <tr> <th>tt</th> 
+                <th>gg</th>
+                <th>jj</th>
+             </tr></thead>
+
+
+            <tbody>
+             <tr> <td>ff</td>
+                  <td>pp</td>
+                  <td>dd</td>
+             </tr> </tbody>
+    </table>
+
+        <p style="border:1px red solid; width: 50%; height: 50%;;"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, quas officiis. Inventore blanditiis esse pariatur, voluptatum consectetur ipsa sint in repudiandae atque natus voluptate facere ea autem magnam praesentium officia ex assumenda nostrum adipisci libero 
+        culpa quisquam. Nulla dicta atque debitis architecto aliquid sit commodi eos, tenetur quibusdam ab magnam.</p>
+
+
+
+   </html>
+         </body>
