--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <a href="Thursday_20_10/task1.html">task16</a>
 <a href="Thursday_20_10/task2.html">task17</a>
 <a href="Thursday_20_10/task3.html">task18</a>
+<h1> Sunday _23_10</h1>
+<a href="sunday_23_10/task1.html">task19</a>
+<a href="sunday_23_10/task2.html"> task20</a>
 
    
 
