--- a/tast/h.html
+++ b/tast/h.html
@@ -11,9 +11,9 @@
 <style>
    #g{section
      /* margin: 70px; */
-    /* padding-top:  100px; */
+    padding-top:  100px;
     /* margin-top: 100px; */
-    box-sizing: 
+  
    }
 </style>
 
