--- a/tast/tasttt.html
+++ b/tast/tasttt.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<style>
+
+#d{display:grid}
+
+
+
+</style>
+
+
+
+    
 </head>
-<body style="background-color: red  ;" >
-    <h1 style="color: rgb(129, 192, 129);font-size:67px">fatima</h1>
-    <p style="background-color:rgb(45, 32, 142) ; font-size:180px;color: blueviolet;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;text-align: right;">fadt</p>
+<body >
+
+
+
+
+
+    <p i="d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis odit molestiae voluptatem ipsa! Esse, nam. Molestias, laudantium architecto. Nam pariatur excepturi, ipsam quia, fugit iste rem tempore numquam neque quae quos, ab maiores incidunt! Natus totam nesciunt placeat dolorem nobis, provident nulla quidem possimus nostrum beatae itaque culpa! Dicta, atque! Eum expedita, necessitatibus voluptate et voluptatibus reiciendis! Iusto, dignissimos maiores?</p>
 </body>
 </html>
