--- a/sunday_23_10/task1.html
+++ b/sunday_23_10/task1.html
@@ -13,7 +13,9 @@
   img{   width: 200px;
         height: 400px; 
         position:fixed;
-        right: 10px;     
+        top:20px;
+        right: 10px; 
+        z-index:1;    
       } 
     </style>
 
