--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 <h1> Sunday _23_10</h1>
 <a href="sunday_23_10/task1.html">task19</a>
 <a href="sunday_23_10/task2.html"> task20</a>
-
-   
+<h1> Monday _24_10</h1>
+<a href="Monday_24_10/taskk1.html">task1</a>
+   <a href="Monday_24_10/taskk2.html">task2</a>
 
 </body>
 </html>
