--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
 <a href="Monday_24_10/taskk1.html">task1</a>
    <a href="Monday_24_10/taskk2.html">task2</a>
 
+   <H1>Tuesday_25_10</H1>
+   <a href="tuesday_25_10.html/task1.html">Task1</a>
+   <a href="tuesday_25_10.html/task2.html">Task2</a>
+   <a href="tuesday_25_10.html/task3.html">Task3</a>
+
 </body>
 </html>
