--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
    <a href="tuesday_25_10.html/task1.html">Task1</a>
    <a href="tuesday_25_10.html/task2.html">Task2</a>
    <a href="tuesday_25_10.html/task3.html">Task3</a>
+   <a href="tuesday_25_10/task4.html"> Task4</a>
 
 </body>
 </html>
