--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
    <a href="tuesday_25_10.html/task2.html">Task2</a>
    <a href="tuesday_25_10.html/task3.html">Task3</a>
    <a href="tuesday_25_10/task4.html"> Task4</a>
+   <h1> wednesday_26_10</h1>
+   <a href="Wednesday_26_10/page.html"> web page</a>
+   <a href="Wednesday_26_10/task1.html"> Task1</a>
+   <a href="Wednesday_26_10/task2.html">Task2</a>
+
+   <a href="Wednesday_26_10/task.html"> ifram-video-audio</a>
 
 </body>
 </html>
